--- a/.gitignore
+++ b/.gitignore
@@ -118,9 +118,6 @@ venv.bak/
 # Rope project settings #
 .ropeproject
 
-# mkdocs documentation #
-/site
-
 # mypy #
 .mypy_cache/
 .dmypy.json
@@ -134,3 +131,5 @@ dmypy.json
 
 # Cython debug symbols #
 cython_debug/
+
+.vscode
