--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.7.2
-Django==3.2
+Django==3.2.23
+django-jinja==2.11.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 psycopg2==2.9.9
+pycountry==22.3.5
 pytz==2023.3.post1
 sqlparse==0.4.4
 typing_extensions==4.8.0
