scorer: Add base score

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,8 @@ POSTGRES_DB="djinni_sandbox"
 POSTGRES_USER="admin"
 POSTGRES_PASSWORD="123456"
 DJANGO_SETTINGS_MODULE="project.settings"
-PORT=8000
+DJANGO_PORT=8000
+DJANGO_DEBUG=1
+SCORE_EXP_WEIGHT=0.5
+SCORE_ENG_WEIGHT=0.25
+SCORE_SALARY_WEIGHT=0.25
