scorer: Add SCORE_COMPANY_TYPE_WEIGHT score param; Update requirements.txt

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ POSTGRES_PASSWORD="123456"
 DJANGO_SETTINGS_MODULE="project.settings"
 DJANGO_PORT=8000
 DJANGO_DEBUG=1
-SCORE_EXP_WEIGHT=0.5
+SCORE_EXP_WEIGHT=0.31
+SCORE_COMPANY_TYPE_WEIGHT=0.19
 SCORE_ENG_WEIGHT=0.25
 SCORE_SALARY_WEIGHT=0.25
