--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
+annotated-types==0.6.0
 asgiref==3.7.2
 Django==3.2.23
 django-jinja==2.11.0
+gensim==4.3.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+numpy==1.26.1
 psycopg2==2.9.9
 pycountry==22.3.5
+pydantic==2.4.2
+pydantic-core==2.10.1
+pydantic-settings==2.0.3
+python-dotenv==1.0.0
 pytz==2023.3.post1
+scipy==1.11.3
+smart-open==6.4.0
 sqlparse==0.4.4
-typing_extensions==4.8.0
+typing-extensions==4.8.0
